<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2012, Katy Hilgenberg.
 * Special acknowledgments to: Knowledge & Data Engineering Group, University of Kassel (http://www.kde.cs.uni-kassel.de).
 * Contact: sdcf@cs.uni-kassel.de
 *
 * This file is part of the SDCFramework (Sensor Data Collection Framework) project.
 *
 * The SDCFramework is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Lesser General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * The SDCFramework is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with the SDCFramework.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group
        android:id="@+id/groupUpper"
        android:menuCategory="container" >
        <item
            android:id="@+id/preferences"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/str_preferences">
        </item>
        <item
            android:id="@+id/externalConfiguration"
            android:icon="@android:drawable/ic_menu_preferences"
            android:menuCategory="container"
            android:title="@string/str_external_config">
            <menu>
                <item
                    android:id="@+id/loadDefaults"
                    android:title="@string/str_load_defaults"/>
                <item
                    android:id="@+id/loadPublicKey"
                    android:title="@string/str_load_pubkey"/>
            </menu>
        </item>
    </group>
</menu>