<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textViewSelectWorkday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/str_choose_weekday"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green" />

    <Spinner
        android:id="@+id/selectWeekday"
        style="spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewSelectAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/str_choose_action"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green" />

    <Spinner
        android:id="@+id/selectAction"
        style="@layout/add_schedule_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_margin="1dip"
        android:background="@color/green" />

    <TextView
        android:id="@+id/textViewChooseTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/str_select_start_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_margin="1dip"
        android:background="@color/green" />

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/gridSpacing"
        android:background="@drawable/button"
        android:drawableRight="@drawable/ic_menu_save"
        android:minHeight="50dp"
        android:minWidth="50dp" />

</LinearLayout>